# SMCT

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/API/routes/: users.py
backend/app/DB/postgres/: core.py
backend/app/DB/postgres/Orms/: user.py
backend/app/DB/postgres/Repositories/: user.py
backend/app/Models/: user.py
