[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]
